2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.ac: Up version to 0.8.3 for release

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* icon-name-mapping.pl.in: Update author info

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* AUTHORS: Update my info

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	Original patch from Damien Carbery <damien.carbery@sun.com>

	* Makefile.am: Update to include icon-naming-utils-uninstalled.pc.in

	* configure.ac: Output icon-naming-utils-uninstalled.pc

	* icon-naming-utils-uninstalled.pc.in: Add uninstalled pc.in file

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=10222

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml: Link help-about to gtk-about

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=11168

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	Some patching from Luca Ferretti <elle.uca@libero.it>
	
	* legacy-icon-mapping.xml:
	Update document-revert links to use ltr/rtl forms
	Add links for emblem-{noread,nowrite}
	Add link for gtk-execute
	Add links for gtk-spell-check and stock_spellcheck
	Add link for stock_print-setup

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=11479
	https://bugs.freedesktop.org/show_bug.cgi?id=11480
	https://bugs.freedesktop.org/show_bug.cgi?id=11481
	https://bugs.freedesktop.org/show_bug.cgi?id=11482
	https://bugs.freedesktop.org/show_bug.cgi?id=11507
	https://bugs.freedesktop.org/show_bug.cgi?id=11532

2007-08-01  Rodney Dawes  <dobey.pwns@gmail.com>

	Patch from Luca Ferretti <elle.uca@libero.it>
	
	* legacy-icon-mapping.xml: Update gtk-{indent,unindent} links

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=11466

2007-03-23  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add gtk-directory link to folder icon

2007-03-23  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Link process-stop to gtk-cancel

2007-02-19  Rodney Dawes  <dobey@novell.com>
